--- a/src/app/pages/ingresoalineacion/ingresoalineacion.page.html
+++ b/src/app/pages/ingresoalineacion/ingresoalineacion.page.html
@@ -144,7 +144,7 @@
 
 <ion-grid>
   <ion-row>
-   <ion-col style="background-color: rgb(96, 250, 82);" text-center>ALINEACIÓN</ion-col>
+   <ion-col style="background-color: rgb(255, 0, 0);" text-center>CAMBIOS EN EL PARTIDO</ion-col>
   </ion-row>
   <ion-card *ngFor="let item of listar_cambiosR">
 
