--- a/src/app/pages/jugadores/jugadores.page.html
+++ b/src/app/pages/jugadores/jugadores.page.html
@@ -32,8 +32,9 @@
              <ion-col size="9">
               <ion-label class="ion-text-wrap">
                 <ion-text color="primary">
-                  <h2>Representante: {{item.nombreR}}</h2>
+                  <h2>Representante: {{item.nombreR}} {{item.nequipo}}</h2>
               </ion-text>
+              
                   <ion-text color="dark" >
                       <h2>Jugador: {{item.nombreJ}}</h2>
                   </ion-text>
