--- a/src/app/pages/inicio/inicio.page.html
+++ b/src/app/pages/inicio/inicio.page.html
@@ -4,8 +4,10 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-     
-    <ion-title size="undefined" align="center">Liga Deportiva Cantonal Pillaro</ion-title>
+     <h5>
+      <ion-title  size="small" align="center">Liga Deportiva Cantonal Pillaro</ion-title>
+     </h5>
+    
   </ion-toolbar>
 </ion-header>
 
