--- a/src/app/pages/goles/goles.page.html
+++ b/src/app/pages/goles/goles.page.html
@@ -2,10 +2,10 @@
   <ion-toolbar color="success">
 
     <ion-buttons slot="start">
-      <ion-back-button text="Atras" defaultHref="/inicio"></ion-back-button>
+      <ion-back-button text=" " defaultHref="/inicio"></ion-back-button>
   </ion-buttons>
   <ion-avatar slot="end"><img src="../assets/icon/logoLiga.png"></ion-avatar>
-  <ion-title size="undefined" align="center">Liga Deportiva Cantonal Pillaro</ion-title>
+  <ion-title size="undefined" style="font-family:Times" align="center">Goles del jugador</ion-title>
   </ion-toolbar>
 </ion-header>
 
