--- a/src/app/pages/inicio/inicio.page.html
+++ b/src/app/pages/inicio/inicio.page.html
@@ -5,7 +5,7 @@
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
      <h5>
-      <ion-title  size="small" align="center">Liga Deportiva Cantonal Pillaro</ion-title>
+      <ion-title  size="undefined" align="center">Liga Deportiva Cantonal Pillaro</ion-title>
      </h5>
     
   </ion-toolbar>
