--- a/src/app/pages/calendario/calendario.page.html
+++ b/src/app/pages/calendario/calendario.page.html
@@ -1,10 +1,10 @@
 <ion-header>
   <ion-toolbar color="success">
       <ion-buttons slot="start">
-          <ion-back-button size="small" text="Atras" defaultHref="/inicio"></ion-back-button>
+          <ion-back-button size="small" text=" " defaultHref="/inicio"></ion-back-button>
       </ion-buttons>
       <ion-avatar slot="end"><img src="../assets/icon/logoLiga.png"></ion-avatar>
-      <ion-title size="small" align="center">Liga Deportiva Cantonal Pillaro</ion-title>
+      <ion-title size="undefined" style="font-family:Times" align="center">Calendario</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -14,21 +14,21 @@
           
         <ion-item-group>
             <ion-item>
-                <ion-label>TEMPORADAS</ion-label>
-               <ion-select [(ngModel)]="temporadas"  (ionChange)="cargarSeries()">
+                <ion-label>TEMPORADA</ion-label>
+               <ion-select  [(ngModel)]="temporadas"  (ionChange)="cargarSeries()">
                  <ion-select-option *ngFor="let item of lista_temporadas" value='{{item.idtemporada}}'>{{item.nombre_temporada}} </ion-select-option>
                </ion-select>
               </ion-item>
 
               <ion-item>
-                  <ion-label>SERIES</ion-label>
+                  <ion-label>SERIE</ion-label>
                  <ion-select *ngIf="lista_series.length > 0" [(ngModel)]="series" (ionChange)="cargarTemporadas()">
                    <ion-select-option *ngFor="let item of lista_series" value='{{item.idserie}}'>{{item.nombreserie}} </ion-select-option>
                  </ion-select>
               </ion-item>
 
                 <ion-item>
-                    <ion-label>CATEGORIAS</ion-label>
+                    <ion-label>CATEGORIA</ion-label>
                    <ion-select *ngIf="lista_categorias.length > 0"  [(ngModel)]="categorias" (ionChange)="cargarCalendario()">
                      <ion-select-option *ngFor="let item of lista_categorias" value='{{item.idcategoria}}'>{{item.nombre_cate}}</ion-select-option>
                    </ion-select>
