--- a/src/app/pages/equipos/equipos.page.html
+++ b/src/app/pages/equipos/equipos.page.html
@@ -1,10 +1,10 @@
 <ion-header>
   <ion-toolbar color="success">
       <ion-buttons slot="start">
-          <ion-back-button text="Atras" defaultHref="/inicio"></ion-back-button>
+          <ion-back-button text=" " defaultHref="/inicio"></ion-back-button>
       </ion-buttons>
       <ion-avatar slot="end"><img src="../assets/icon/logoLiga.png"></ion-avatar>
-       <ion-title size="undefined" align="center">Liga Deportiva Cantonal Pillaro</ion-title>
+       <ion-title size="undefined" style="font-family:Times" align="center">Equipos</ion-title>
   </ion-toolbar>
   <!-- BUSCAR EQUIPOS -->
  <ion-toolbar>
@@ -19,7 +19,7 @@
   <ion-list>
     
     <ion-grid>
-      <ion-label>FILTROS DE BUSQUEDA</ion-label>
+      <ion-label style="font-family:'Franklin Gothic Medium'">FILTROS</ion-label>
       <ion-row>
         <ion-col size="6">
           <ion-item-group>
