--- a/src/app/pages/ingresoalineacion/ingresoalineacion.page.html
+++ b/src/app/pages/ingresoalineacion/ingresoalineacion.page.html
@@ -1,11 +1,11 @@
 <ion-header >
   <ion-toolbar color="success" >
     <ion-buttons slot="start">
-      <ion-back-button text="Atras" defaultHref="/inicio"></ion-back-button>
+      <ion-back-button text=" " defaultHref="/inicio"></ion-back-button>
   </ion-buttons>
   <ion-avatar slot="end"><img src="../assets/icon/logoLiga.png"></ion-avatar>
   <h5>
-    <ion-title size="undefined" align="center">Liga Deportiva Cantonal Pillaro</ion-title>
+    <ion-title size="undefined" style="font-family:Times" align="center">Alineación</ion-title>
   </h5>
 
   </ion-toolbar>
