--- a/src/app/pages/ingresoinforme/ingresoinforme.page.html
+++ b/src/app/pages/ingresoinforme/ingresoinforme.page.html
@@ -1,19 +1,90 @@
 <ion-header>
   <ion-toolbar color="success">
     <ion-buttons slot="start">
-      <ion-back-button text="Atras" defaultHref="/inicio"></ion-back-button>
+      <ion-back-button text=" " defaultHref="/inicio"></ion-back-button>
   </ion-buttons>
     <ion-avatar slot="end"><img src="../assets/icon/logoLiga.png"></ion-avatar>
-    <ion-title size="undefined" align="center">Liga Deportiva Cantonal Pillaro</ion-title>
+    <ion-title size="undefined" style="font-family:Times" align="center">Ingreso del informe</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content class="ion-padding">
+<ion-grid>
+  <ion-label style="font-family:'Franklin Gothic Medium'">FILTROS</ion-label>
+  <ion-row>
+    <ion-col text-center>
+  <ion-item-group>
+    <ion-item>
+        <ion-label position="floating"></ion-label>
+       <ion-select  placeholder="EQUIPO 1" [(ngModel)]="ganador">
+         <ion-select-option *ngFor="let item of lista_equipos" value='{{item.idequipo1}}'>{{item.equipo1}}</ion-select-option>
+       </ion-select>
+      </ion-item>
+  </ion-item-group>
+    </ion-col>
 
+  <ion-col text-center> 
+  <ion-item-group>
+    <ion-item>
+        <ion-label position="floating" ></ion-label>
+       <ion-select  placeholder="EQUIPO 2" [(ngModel)]="perdedor" >
+         <ion-select-option *ngFor="let item of lista_equipos" value='{{item.idequipo1}}'>{{item.equipo1}}</ion-select-option>
+       </ion-select>
+      </ion-item>
+  </ion-item-group>
+    </ion-col>
+  </ion-row>
+  <ion-row>
+    <ion-col text-center>
+      <ion-item>
+        <ion-label position="floating"></ion-label>
+        <ion-select placeholder="RESULTADO" [(ngModel)]="resultado">
+          <ion-select-option value="1">GANADO</ion-select-option>
+          <ion-select-option value="2">PERDIDO</ion-select-option>
+          <ion-select-option value="3">EMPATADO</ion-select-option>
+        </ion-select>
+      </ion-item>
+    </ion-col>
+    <ion-col text-center>
+      <ion-item>
+        <ion-label position="floating"></ion-label>
+        <ion-select placeholder="RESULTADO" [(ngModel)]="resultado">
+          <ion-select-option value="1">GANADO</ion-select-option>
+          <ion-select-option value="2">EMPATADO</ion-select-option>
+          <ion-select-option value="3">PERDIDO</ion-select-option>
+        </ion-select>
+      </ion-item>
+    </ion-col>
+  </ion-row>
+  <ion-row>
+    <ion-col text-center>
+      <ion-item>
+        <ion-label position="floating"></ion-label>
+        <ion-select placeholder="PUNTOS" [(ngModel)]="puntos">
+          <ion-select-option value="3">3 PUNTOS</ion-select-option>
+          <ion-select-option value="1">1 PUNTO</ion-select-option>
+          <ion-select-option value="0">0 PUNTOS</ion-select-option>
+        </ion-select>
+      </ion-item>
+    </ion-col>
+    <ion-col text-center>
+      <ion-item>
+        <ion-label position="floating"></ion-label>
+        <ion-select placeholder="PUNTOS" [(ngModel)]="puntos">
+          <ion-select-option value="3">3 PUNTOS</ion-select-option>
+          <ion-select-option value="1">1 PUNTO</ion-select-option>
+          <ion-select-option value="0">0 PUNTOS</ion-select-option>
+        </ion-select>
+      </ion-item>
+    </ion-col>
+  </ion-row>
+
+
+</ion-grid>
 
     <ion-item>
       <ion-label position="floating">INGRESAR INFORME</ion-label>
-      <ion-input type="text"></ion-input>
+      <ion-input type="text" [(ngModel)]="informe"></ion-input>
     </ion-item>
     <ion-button  expand="block" fill="outline" type="submit" (click)="insertarInforme()">GUARDAR</ion-button>
 
