--- a/src/app/pages/listagoleadores/listagoleadores.page.html
+++ b/src/app/pages/listagoleadores/listagoleadores.page.html
@@ -2,16 +2,16 @@
   <ion-toolbar color="success">
 
       <ion-buttons slot="start">
-          <ion-back-button text="Atras" defaultHref="/inicio"></ion-back-button>
+          <ion-back-button text=" " defaultHref="/inicio"></ion-back-button>
       </ion-buttons>
       <ion-avatar slot="end"><img src="../assets/icon/logoLiga.png"></ion-avatar>
-      <ion-title size="undefined" align="center">Liga Deportiva Cantonal Pillaro</ion-title>
+      <ion-title size="undefined" style="font-family:Times" align="center">Top de goleadores</ion-title>
   </ion-toolbar>
   <ion-toolbar>
     <!-- FILTROS -->
    
   <ion-grid>
-    <ion-label>FILTROS DE BUSQUEDA</ion-label>
+    <ion-label size="undefined" style="font-family:'Franklin Gothic Medium'">FILTROS</ion-label>
     <ion-row>
     
       <ion-col size="6">
