--- a/src/app/pages/registro-arbi/registro-arbi.page.html
+++ b/src/app/pages/registro-arbi/registro-arbi.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar color="success">
     <ion-avatar slot="end"><img src="../assets/icon/logoLiga.png"></ion-avatar>
-    <ion-title size="undefined" align="center">Liga Deportiva Cantonal Pillaro</ion-title>
+    <ion-title size="undefined" style="font-family:Times" align="center">Registrarse</ion-title>
 </ion-toolbar>
 </ion-header>
 
