--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
        
       <ion-header>
          <ion-toolbar color="success" >
-           <ion-title>Menu</ion-title>
+           <ion-title style="font-family:Times">Menu</ion-title>
          
          </ion-toolbar>
      </ion-header>
