--- a/src/app/pages/goles/goles.page.html
+++ b/src/app/pages/goles/goles.page.html
@@ -16,7 +16,7 @@
 
       <ion-label class="ion-text-wrap">
         <ion-text color="primary">
-          <h2>Nombre Jugador: {{item.nombre1}} {{item.apellido1}} {{item.apellido2}}</h2>
+          <h2>Nombre: {{item.nombre1}} {{item.apellido1}} {{item.apellido2}}</h2>
       </ion-text>
             <ion-text>
                <p>Fecha en calendario: {{item.fecha}}</p>
