--- a/src/app/pages/jugadores/jugadores.page.html
+++ b/src/app/pages/jugadores/jugadores.page.html
@@ -16,14 +16,15 @@
   
   <ion-content>
   
-      <ion-list>
-         <ion-item *ngFor="let item of liga | buscador:buscarJugador: 'nombreJ'" (click)="MostarGolesyHuella(item)"> 
-        
-        
-        
+      <ion-card *ngFor="let item of liga | buscador:buscarJugador: 'nombreJ'" (click)="MostarGolesyHuella(item)">
+         
           <ion-grid>
+
            <ion-row>
+          
              <ion-col size="3">
+              <ion-row> <br> </ion-row>
+              <ion-row> <br> </ion-row>
               
                 <img [src]="url+item.fotos">
             
@@ -34,7 +35,6 @@
                 <ion-text color="primary">
                   <h2>Representante: {{item.nombreR}} {{item.nequipo}}</h2>
               </ion-text>
-              
                   <ion-text color="dark" >
                       <h2>Jugador: {{item.nombreJ}}</h2>
                   </ion-text>
@@ -53,12 +53,18 @@
                           <ion-text color="medium">
                               <p>Telefono Fijo: {{item.telefono}}</p>
                             </ion-text>
+                            <!-- <ion-text color="medium">
+                              <p>N° camiseta: {{item.N_camiseta}}</p>
+                            </ion-text> -->
+                           <!--  <ion-text  color="medium">
+                              <p>N equipo: {{item.nombreequipo}}</p>
+                            </ion-text> -->
+                            
              </ion-label>
             </ion-col>
             
            </ion-row>
          </ion-grid>    
-        </ion-item>
-      </ion-list>
+        </ion-card>
   </ion-content>
   
