--- a/src/app/pages/listagoleadores/listagoleadores.page.html
+++ b/src/app/pages/listagoleadores/listagoleadores.page.html
@@ -33,7 +33,7 @@
           <ion-item-group>
               <ion-item>
                   <ion-label position="floating" ></ion-label>
-                 <ion-select  placeholder="CATEGORIA" [(ngModel)]="idcategoria" (ionChange)="cargaGoleadores()" >
+                 <ion-select  placeholder="CATEGORIA" *ngIf="combo_categoria.length > 0" [(ngModel)]="idcategoria" (ionChange)="cargaGoleadores()" >
                    <ion-select-option *ngFor="let item of combo_categoria" value='{{item.idcategoria}}' >{{item.nombre_cate}}</ion-select-option>
                  </ion-select>
                 </ion-item>
@@ -49,9 +49,9 @@
 </ion-header>
 
 <ion-content>
- 
-  <ion-list>
-    <ion-item *ngFor="let item of goleadores"> 
+ <ion-card *ngFor="let item of goleadores">
+
+  
       <ion-grid>
         <ion-row>
           <ion-col size="2">
@@ -73,9 +73,10 @@
          </ion-label>
           </ion-col>
         </ion-row>
-      </ion-grid>      
- </ion-item>      
-</ion-list>
+      </ion-grid>    
+      
+ </ion-card>  
+
 
  <!--     <ion-fab  vertical="bohorattom" horizontal="end" slot="fixed">
       <ion-fab-button color="success">
