--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
        
       <ion-header>
          <ion-toolbar color="success" >
-           <ion-title style="font-family:Times">Menu</ion-title>
+           <ion-title style="font-family:Times" id='titulo' name='titulo'></ion-title>
          
          </ion-toolbar>
      </ion-header>
@@ -18,6 +18,7 @@
             {{usuario}}
           </ion-text> -->
            <ion-menu-toggle auto-hide="false" *ngFor="let p of Paginas">
+           
               <ion-item [routerDirection]="'root'" [routerLink]="[p.url]">
                   <ion-icon slot="start" [name]="p.icon"></ion-icon>
                     <ion-label>
