--- a/src/app/pages/carnets/carnets.page.html
+++ b/src/app/pages/carnets/carnets.page.html
@@ -21,7 +21,7 @@
      
       </ion-col>
       <ion-col size="5">
-          <img style="height: 130px;"  src="data:image/png;base64,{{imagenqr}}"/>
+          <img style="height: 130px;"  src="data:image/png;base64,{{item.qr}}"/>
       </ion-col>
       
     </ion-row>
