--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,20 @@
        
       <ion-header>
          <ion-toolbar color="success" >
-           <ion-title style="font-family:Times" id='titulo' name='titulo'></ion-title>
+<ion-grid>
+  <ion-row>
+   
+      <ion-title  style="font-family:Times">Bienvenid@:</ion-title>
+    
+  </ion-row>
+  <ion-row>
+
+      <ion-title style="font-family:Times" id='titulo' name='titulo'></ion-title>
+      
+   
+  </ion-row>
+</ion-grid>
+           
          
          </ion-toolbar>
      </ion-header>
@@ -14,6 +27,7 @@
        <ion-content>
   
          <ion-list>
+           
           <!-- <ion-text>
             {{usuario}}
           </ion-text> -->
