--- a/src/app/pages/ingresoalineacion/ingresoalineacion.page.html
+++ b/src/app/pages/ingresoalineacion/ingresoalineacion.page.html
@@ -116,6 +116,15 @@
                      <h3 class="ion-text-uppercase" >{{item.nombre1+' '+item.nombre2+' '+item.apellido1+' '+item.apellido2 }}</h3>
 
                    </ion-text>
+                   <ion-text>
+                    <h2>
+                       Cedula: {{item.cedula}}
+                    </h2>
+                  </ion-text>
+                  <ion-text color="#000000">
+                   <h2>Número de camiseta: {{item.N_camiseta}}</h2>
+                  </ion-text>
+
                </ion-label>
                </ion-col>
               </ion-row> 
@@ -170,6 +179,14 @@
                    <ion-text color="primary" >  
                      <h3 class="ion-text-uppercase" >{{item.ENTRA}}</h3>
                    </ion-text>
+                   <ion-text>
+                    <h2>
+                       Cedula: {{item.cedula}}
+                    </h2>
+                  </ion-text>
+                  <ion-text color="#000000">
+                   <h2>Número de camiseta: {{item.N_camiseta}}</h2>
+                  </ion-text>
               </ion-label>
                </ion-col>
               </ion-row>
