--- a/src/app/pages/ingresoinforme/ingresoinforme.page.html
+++ b/src/app/pages/ingresoinforme/ingresoinforme.page.html
@@ -9,35 +9,45 @@
 </ion-header>
 
 <ion-content class="ion-padding">
+  <ion-card>
 <ion-grid>
-  <ion-label style="font-family:'Franklin Gothic Medium'">FILTROS</ion-label>
-  <ion-row>
+
+  <ion-row >
     <ion-col text-center>
-
-
-       <!-- <ion-select  placeholder="EQUIPO 1" [(ngModel)]="equipo1">
-         <ion-select-option *ngFor="let item of lista_equipos" value='{{item.idequipo1}}'>{{item.equipo1}}</ion-select-option>
-       </ion-select> -->
-       <ion-label text-center >{{equipo1}}</ion-label>
- 
-    </ion-col>
-
-  <ion-col text-center> 
-
-        <ion-label>{{equipo2}}</ion-label>
-     <!--   <ion-select  placeholder="EQUIPO 2" [(ngModel)]="equipo2" >
-         <ion-select-option *ngFor="let item of lista_equipos" value='{{item.idequipo1}}'>{{item.equipo1}}</ion-select-option>
-       </ion-select> -->
-  
+      <b >EQUIPOS</b>
     </ion-col>
   </ion-row>
+
   <ion-row>
     <ion-col text-center>
+       <ion-label text-center >{{equipo1}}</ion-label>
+    </ion-col>
+  <ion-col text-center> 
+        <ion-label>{{equipo2}}</ion-label>
+    </ion-col>
+  </ion-row>
+
+  <ion-row >
+    <ion-col text-center>
+      <b >MARCADOR</b>
+    </ion-col>
+  </ion-row>
+
+  <ion-row>
+    <ion-col text-center>
+      
      {{resultado1}}
     </ion-col>
     <ion-col text-center>
+      
      {{resultado2}}
     </ion-col>
+  </ion-row>
+  <ion-row >
+    <ion-col text-center>
+      <b >RESULTADO</b>
+    </ion-col>
+    
   </ion-row>
   <ion-row>
     <ion-col text-center>
@@ -48,35 +58,34 @@
     </ion-col>
   </ion-row>
   <ion-row>
-    <ion-col text-center>
-     <ion-list>
+    <ion-list>  <ion-col text-center>
       <ion-item *ngFor="let item of falatsequipo1">
-       <ion-label>
-        {{item.nombre}}
-     </ion-label>
-     <ion-label>
-      {{item.nombrefalta}}
-   </ion-label>
-</ion-item>
+        <ion-row>
+          {{item.nombre}}
+        </ion-row>
+        <ion-row>
+          {{item.nombrefalta}}
+        </ion-row>
+       
+    </ion-item>
+    </ion-col></ion-list>
+    <ion-list><ion-col text-center>
 
-     </ion-list>
-    </ion-col>
-    <ion-col text-center>
-     <ion-list>
 
-<ion-item *ngFor="let item of faltasequipo2">
-  <ion-label>
-  {{item.nombre}}
-  </ion-label>
-  <ion-label>
-    {{item.nombrefalta}}
- </ion-label>
-</ion-item>
-     </ion-list>
-    </ion-col>
+      <ion-item *ngFor="let item of faltasequipo2">
+        <ion-row>
+          {{item.nombre}}
+        </ion-row>
+        <ion-row>
+          {{item.nombrefalta}}
+        </ion-row>
+      </ion-item>
+          
+          </ion-col></ion-list>
+  
+
+
   </ion-row>
-
-
 </ion-grid>
 
     <ion-item>
@@ -84,6 +93,7 @@
       <ion-textarea name="comentarios" rows="10" cols="40" [(ngModel)]="informe"></ion-textarea>
      
     </ion-item>
-    <ion-button  expand="block" fill="outline" type="submit" (click)="insertarInforme()">GUARDAR</ion-button>
+  </ion-card>
+    <ion-button  expand="block" fill="outline" type="submit"  (click)="insertarInforme()">GUARDAR</ion-button>
 
 </ion-content>
