--- a/src/app/pages/perfil-arbi/perfil-arbi.page.html
+++ b/src/app/pages/perfil-arbi/perfil-arbi.page.html
@@ -10,38 +10,51 @@
 </ion-header>
 
 <ion-content>
-  <div class="form-background" *ngFor="let item of arbitro">
-    <ion-label><h1>PERFIL DEL ARBITRO</h1></ion-label>
-   <ion-item>
-     <ion-label>NOMBRE: </ion-label>
-     <ion-input type="text">{{item.nombre}} {{item.apellido}}
-     </ion-input>
-   </ion-item>
-   <ion-item>
-     <ion-label >CEDULA: </ion-label>
-     <ion-input type="text">{{item.cedula}}
-     </ion-input>
-   </ion-item>
-   <ion-item>
-     <ion-label>DIRECCIÓN: </ion-label>
-     <ion-input type="text">{{item.direccion}}
-     </ion-input>
-   </ion-item>
-   <ion-item>
-     <ion-label >TELEFONO: </ion-label>
-     <ion-input type="text">{{item.telefono}}
-     </ion-input>
-   </ion-item>
-   <ion-item>
-     <ion-label>CELULAR:</ion-label>
-     <ion-input type="text">{{item.celular}}
-     </ion-input>
-   </ion-item>
-   <ion-item>
-     <ion-label>CORREO: </ion-label>
-     <ion-input type="text">{{item.correo}}
-     </ion-input>
-   </ion-item>
-    </div>
+  <ion-card>
+    <ion-list>
+      <div class="form-background" *ngFor="let item of arbitro">
+        <ion-label><h1 text-center>PERFIL DEL ARBITRO</h1></ion-label>
+        
+       <ion-grid>
+         <ion-row>
+
+           <ion-col size="3"></ion-col>
+           <ion-col size="6"> <img [src]="url+item.fotoss" ></ion-col>
+           <ion-col size="3" ></ion-col>
+          
+        </ion-row>
+       </ion-grid>
+         
+  
+  
+      <ion-item>
+         <ion-label>NOMBRE: {{item.nombre}} {{item.apellido}} </ion-label>
+            
+       </ion-item>
+       <ion-item>
+         <ion-label >CEDULA: {{item.cedula}}</ion-label>
+        
+       </ion-item>
+       <ion-item>
+         <ion-label>DIRECCIÓN: {{item.cedula}} </ion-label>
+         
+       </ion-item>
+       <ion-item>
+         <ion-label >TELEFONO: {{item.telefono}}</ion-label>
+       
+       </ion-item>
+       <ion-item>
+         <ion-label>CELULAR: {{item.celular}} </ion-label>
+         
+       </ion-item>
+       <ion-item>
+         <ion-label>CORREO: {{item.correo}} </ion-label>
+         
+       </ion-item>
+        </div>
+    </ion-list>
+       
+  </ion-card>
+
  
 </ion-content>
