--- a/src/app/pages/registro-arbi/registro-arbi.page.html
+++ b/src/app/pages/registro-arbi/registro-arbi.page.html
@@ -43,14 +43,10 @@
     <ion-input type="text" [(ngModel)]="correo">
     </ion-input>
   </ion-item>
-  <ion-item>
-    <ion-label position="floating" >USUARIO</ion-label>
-    <ion-input type="text">
-    </ion-input>
-  </ion-item>
+ 
   <ion-item>
     <ion-label position="floating" >CONTRASEÑA</ion-label>
-    <ion-input type="text">
+    <ion-input type="text" [(ngModel)]="password">
     </ion-input>
   </ion-item>
  
