--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,22 +6,20 @@
        
       <ion-header>
          <ion-toolbar color="success" >
-<ion-grid>
-  <ion-row>
-   
-      <ion-title  style="font-family:Times">Bienvenid@:</ion-title>
-    
-  </ion-row>
-  <ion-row>
-
-      <ion-title style="font-family:Times" id='titulo' name='titulo'></ion-title>
-      
-   
-  </ion-row>
-</ion-grid>
            
-         
+          <img src="../assets/icon/logop.png">
+      
          </ion-toolbar>
+         <ion-toolbar color="success" >
+        
+           
+          
+                <ion-title style="font-family:Times" id='titulo' name='titulo'></ion-title>
+                
+          
+                     
+                   
+                   </ion-toolbar>
      </ion-header>
 
        <ion-content>
