--- a/src/app/pages/carnets/carnets.page.html
+++ b/src/app/pages/carnets/carnets.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar color="success">
     <ion-buttons slot="start">
-      <ion-back-button text=" " defaultHref="/inicio"></ion-back-button>
+      <ion-back-button text=" " defaultHref="/equipos"></ion-back-button>
   </ion-buttons>
   <ion-avatar slot="end"><img src="../assets/icon/logoLiga.png"></ion-avatar>
     <ion-title size="undefined" style="font-family:Times" align="center">Lista de Carnets</ion-title>
